Start updating to new idofront conventions

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group=com.mineinabyss
 version=0.11
-serverVersion=1.17.1-R0.1-SNAPSHOT
 useNMS=true
-miaConventionsVersion=1.5.30-19
-kotlinVersion=1.5.30
-idofrontVersion=1.17.1-0.6.27
+idofrontVersion=0.7.30
+idofrontConventions=1.5.31-30
+kotlinVersion=1.5.31
+serverVersion=1.17.1-R0.1-SNAPSHOT
