--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ group=com.mineinabyss
 version=0.11
 useNMS=true
 idofrontVersion=0.7.30
+gearyVersion=0.7.59
 idofrontConventions=1.5.31-30
 kotlinVersion=1.5.31
 serverVersion=1.17.1-R0.1-SNAPSHOT
