--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
 group=com.mineinabyss
-version=0.12
+version=0.13
 useNMS=true
-idofrontConventions=1.6.10-51
+idofrontConventions=1.6.10-59
 gearyVersion=0.13.78
 kotlinVersion=1.6.10
 serverVersion=1.17.1-R0.1-SNAPSHOT
+# Workaround for dokka builds failing on CI, see https://github.com/Kotlin/dokka/issues/1405
+org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m
