--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -27,8 +27,15 @@ jobs:
       - name: Run gradle build and publish
         run: gradle build publish -PmineinabyssMavenUsername=${{ secrets.MAVEN_PUBLISH_USERNAME }} -PmineinabyssMavenPassword=${{ secrets.MAVEN_PUBLISH_PASSWORD }}
 
+      # Prevent dokka from running out of memory https://github.com/Kotlin/dokka/issues/1405
       - name: Generate Dokka
-        run: gradle dokkaHtmlMultiModule
+        shell: bash
+        run: |
+          ./gradlew --stop
+          while true; do ./gradlew --status | grep STOPREQUESTED && ./gradlew --stop ; sleep 10 ; done &
+          ./gradlew dokkaHtmlMultiModule || ./gradlew dokkaHtmlMultiModule || ./gradlew dokkaHtmlMultiModule || ./gradlew dokkaHtmlMultiModule || ./gradlew dokkaHtmlMultiModule
+          kill %1
+          ./gradlew --stop
 
       - name: Publish documentation to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
