--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -27,6 +27,23 @@ jobs:
       - name: Run gradle build and publish
         run: gradle build publish -PmineinabyssMavenUsername=${{ secrets.MAVEN_PUBLISH_USERNAME }} -PmineinabyssMavenPassword=${{ secrets.MAVEN_PUBLISH_PASSWORD }}
 
+      - name: Get version from gradle
+        if: steps.changes.outputs.platform == 'true'
+        shell: bash
+        id: extract_version
+        run: |
+          version=`./gradlew properties --no-daemon --console=plain -q | grep "^version:" | awk '{printf $2}'`
+          echo "::set-output name=version::$version"
+
+      - name: Create GitHub Release
+        uses: marvinpinto/action-automatic-releases@latest
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          automatic_release_tag: v${{ steps.extract_version.outputs.version }}
+          files: |
+            build/libs/*-all.jar
+
       # Prevent dokka from running out of memory https://github.com/Kotlin/dokka/issues/1405
       - name: Generate Dokka
         shell: bash
@@ -43,21 +60,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build/dokka/htmlMultiModule
           force_orphan: true
-
-      - name: Get version from gradle
-        if: steps.changes.outputs.platform == 'true'
-        shell: bash
-        id: extract_version
-        run: |
-          version=`./gradlew properties --no-daemon --console=plain -q | grep "^version:" | awk '{printf $2}'`
-          echo "::set-output name=version::$version"
-
-      - name: Create GitHub Release for shaded idofront platfrom
-        if: steps.changes.outputs.platform == 'true'
-        uses: marvinpinto/action-automatic-releases@latest
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
-          automatic_release_tag: v${{ steps.extract_version.outputs.version }}
-          files: |
-            build/libs/*-all.jar
