tweaks and beginning of mountInventory implementation

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ version=0.14
 useNMS=true
 idofrontConventions=1.6.10-63
 gearyVersion=0.14.84
+guiyVersion=0.3.7
 kotlinVersion=1.6.10
 serverVersion=1.17.1-R0.1-SNAPSHOT
 # Workaround for dokka builds failing on CI, see https://github.com/Kotlin/dokka/issues/1405
