Update to 1.18, use contexts

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 group=com.mineinabyss
 version=0.14
 useNMS=true
-idofrontConventions=1.6.10-63
+idofrontConventions=1.6.20-RC-67
 gearyVersion=0.14.84
-kotlinVersion=1.6.10
-serverVersion=1.17.1-R0.1-SNAPSHOT
+kotlinVersion=1.6.20-RC2
+serverVersion=1.18.2-R0.1-SNAPSHOT
 # Workaround for dokka builds failing on CI, see https://github.com/Kotlin/dokka/issues/1405
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m
