--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -12,27 +12,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
           cache: gradle
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
       - name: Run gradle build and publish
-        run: gradle build publish -PmineinabyssMavenUsername=${{ secrets.MAVEN_PUBLISH_USERNAME }} -PmineinabyssMavenPassword=${{ secrets.MAVEN_PUBLISH_PASSWORD }}
+        run: gradle build publish dokkaHtmlMultiModule -PmineinabyssMavenUsername=${{ secrets.MAVEN_PUBLISH_USERNAME }} -PmineinabyssMavenPassword=${{ secrets.MAVEN_PUBLISH_PASSWORD }}
 
       - name: Get version from gradle
         shell: bash
         id: extract_version
         run: |
-          version=`./gradlew properties --no-daemon --console=plain -q | grep "^version:" | awk '{printf $2}'`
+          version=`gradle properties --console=plain -q | grep "^version:" | awk '{printf $2}'`
           echo "::set-output name=version::$version"
+
+      - name: Publish documentation to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build/dokka/htmlMultiModule
+          force_orphan: true
 
       - name: Create GitHub Release
         uses: marvinpinto/action-automatic-releases@latest
@@ -41,21 +45,4 @@ jobs:
           prerelease: false
           automatic_release_tag: v${{ steps.extract_version.outputs.version }}
           files: |
-            build/libs/*-all.jar
-
-      # Prevent dokka from running out of memory https://github.com/Kotlin/dokka/issues/1405
-      - name: Generate Dokka
-        shell: bash
-        run: |
-          ./gradlew --stop
-          while true; do ./gradlew --status | grep STOPREQUESTED && ./gradlew --stop ; sleep 10 ; done &
-          ./gradlew dokkaHtmlMultiModule || ./gradlew dokkaHtmlMultiModule || ./gradlew dokkaHtmlMultiModule || ./gradlew dokkaHtmlMultiModule || ./gradlew dokkaHtmlMultiModule
-          kill %1
-          ./gradlew --stop
-
-      - name: Publish documentation to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/dokka/htmlMultiModule
-          force_orphan: true
+            build/libs/*[0-9].jar
