--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -8,6 +8,10 @@ on:
       - '**.md'
   pull_request:
 
+concurrency:
+  cancel-in-progress: true
+  group: ci-${{ github.ref }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,14 +25,5 @@ jobs:
           java-version: 17
           cache: gradle
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Build
+      - name: Run build
         run: gradle build
-
-      - name: Upload build
-        uses: actions/upload-artifact@v1
-        with:
-          name: build
-          path: build/libs
