Update to latest geary snapshot

--- a/gradle/myLibs.versions.toml
+++ b/gradle/myLibs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-gearyPaper = "0.23.10"
+gearyPaper = "0.24-SNAPSHOT"
 
 [libraries]
 geary-papermc = { module = "com.mineinabyss:geary-papermc", version.ref = "gearyPaper" }
