--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,9 +2,9 @@ name: Mobzy
 version: ${plugin_version}
 author: Offz
 main: com.mineinabyss.mobzy.MobzyPlugin
-api-version: 1.16
-depend: [ Geary ]
-softdepend: [ Looty, ModelEngine, WorldGuard ]
+api-version: 1.19
+depend: [ Geary, ModelEngine ]
+softdepend: [ WorldGuard ]
 
 prefix: Mobzy
 description: A custom entities API
