--- a/gradle/myLibs.versions.toml
+++ b/gradle/myLibs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-gearyPaper = "0.28.4"
+gearyPaper = "0.29-SNAPSHOT"
 
 [libraries]
 geary-papermc = { module = "com.mineinabyss:geary-papermc", version.ref = "gearyPaper" }
