--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,8 +18,9 @@ jobs:
       - uses: MineInAbyss/publish-action@master
         with:
           maven-metadata-url: https://repo.mineinabyss.com/releases/com/mineinabyss/mobzy/maven-metadata.xml
-          pages-path: build/dokka/htmlMultiModule/
-          dokka: dokkaHtmlMultiModule
+          maven-snapshot-metadata-url: https://repo.mineinabyss.com/snapshots/com/mineinabyss/mobzy/maven-metadata.xml
+#          pages-path: build/dokka/htmlMultiModule/
+#          dokka: dokkaHtmlMultiModule
           maven-username: ${{ secrets.MAVEN_PUBLISH_USERNAME }}
           maven-password: ${{ secrets.MAVEN_PUBLISH_PASSWORD }}
           release-files: |
