--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,9 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - uses: MineInAbyss/publish-action@master
+      - uses: MineInAbyss/publish-action@develop
         with:
           maven-metadata-url: https://repo.mineinabyss.com/releases/com/mineinabyss/mobzy/maven-metadata.xml
           maven-snapshot-metadata-url: https://repo.mineinabyss.com/snapshots/com/mineinabyss/mobzy/maven-metadata.xml
