chore(spawning): Inline check.spawn.gap chore(spawning): Clean up SpawnRegistry to read from a query once in reloadSpawns() instead of using a listener

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-gearyPaper = "0.30.0"
+gearyPaper = "0.30.1-dev.5"
 
 [libraries]
 geary-papermc = { module = "com.mineinabyss:geary-papermc", version.ref = "gearyPaper" }
